--- a/minesweeper.css
+++ b/minesweeper.css
@@ -528,8 +528,8 @@ header span {
 		top: min(8vmin, 80px);
 	}
 	.gameField {
-		width: 65vmin;
-		height: 65vmin;
+		width: 80vmin;
+		height: 80vmin;
 	}
 	.gameField .field span {
 		font-size: 4vmin;
@@ -543,6 +543,13 @@ header span {
 	.navbar .info {
 		font-size: min(5vmin, 2rem);
 		width: 20vmin;
+	}
+}
+
+@media screen and (max-width: 768px) and (max-height: 600px) {
+	.gameField {
+		width: 65vmin;
+		height: 65vmin;
 	}
 }
 
